--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <div class="video3">
         <iframe src="https://www.youtube.com/embed/ARm-Wv7c3Q8?autoplay=0&rel=0" width="275" height="265"></iframe>
         </div>
+        <div class="button">
+            <a><img src="http://britannia.co.in/images/arrowup.png" class="up"></a>
+        </div>
     </div>
 </div>
 <div class="footer">
@@ -78,10 +81,17 @@
             <div class="codeofconduct">
             <p>Code of conduct & policies</p>
             </div>
+            <div class="socialmedia">
+           <img src="fb.jpg" class="imgset">
+           <img src="twitter.png" class="imgset">
+           <img src="youtube.png" class="imgset">
+            </div>
             <div>
 
             </div>
         </div>
+    </div>
+
     </div>
     <div class="copyright">
         <div class="copycontents">
