--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <iframe src="https://www.youtube.com/embed/ARm-Wv7c3Q8?autoplay=0&rel=0" width="275" height="265"></iframe>
         </div>
         <div class="button">
-            <a><img src="http://britannia.co.in/images/arrowup.png" class="up"></a>
+            <a><img src="arrowup.png" class="up"></a>
         </div>
     </div>
 </div>
